# dynamic-frcm-simple

./: .python-version  README.md  pyproject.toml
src/frcm/: __main__.py  frcapi.py
src/frcm/datamodel/: model.py
src/frcm/fireriskmodel/: preprocess.py
