[project]
name = "frcm"
version = "0.1.0"
description = ""
maintainers = [
    { "name" = "Lars Michael Kristensen", "email" = "lmkr@users.noreply.github.com" },
    { "name" = "Patrick Stünkel", "email" = "webminz@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "pydantic == 2.5.3",
    "python-dateutil == 2.8.2",
    "pytest == 7.4.4",
    "numpy == 1.26.3",
    "requests == 2.31.0",
    "python-decouple == 3.8"
]



